fix a bunch of checked menu items (blame glade-2)

--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -146,7 +146,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <signal name="activate" handler="on_dealer_west1_activate" last_modification_time="Wed, 13 Jun 2007 21:59:48 GMT"/>
 			    </widget>
 			  </child>
@@ -156,7 +156,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_North</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">dealer_west1</property>
 			      <signal name="activate" handler="on_dealer_north1_activate" last_modification_time="Wed, 13 Jun 2007 21:59:48 GMT"/>
 			    </widget>
@@ -167,7 +167,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_East</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">dealer_west1</property>
 			      <signal name="activate" handler="on_dealer_east1_activate" last_modification_time="Wed, 13 Jun 2007 21:59:48 GMT"/>
 			    </widget>
@@ -221,7 +221,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_West</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <signal name="activate" handler="on_declarer_west1_activate" last_modification_time="Sat, 03 Feb 2007 20:43:59 GMT"/>
 		    </widget>
 		  </child>
@@ -231,7 +231,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_North</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <property name="group">declarer_west1</property>
 		      <signal name="activate" handler="on_declarer_north1_activate" last_modification_time="Sat, 03 Feb 2007 20:43:59 GMT"/>
 		    </widget>
@@ -242,7 +242,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_East</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <property name="group">declarer_west1</property>
 		      <signal name="activate" handler="on_declarer_east1_activate" last_modification_time="Sat, 03 Feb 2007 20:43:59 GMT"/>
 		    </widget>
@@ -270,7 +270,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">No _Trump</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <signal name="activate" handler="on_contract_no_trump1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
 		  </child>
@@ -280,7 +280,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">♠ S_pades</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <property name="group">contract_no_trump1</property>
 		      <signal name="activate" handler="on_contract_spades1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
@@ -291,7 +291,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">♥ _Hearts</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <property name="group">contract_no_trump1</property>
 		      <signal name="activate" handler="on_contract_hearts1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
@@ -302,7 +302,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">♦ _Diamonds</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <property name="group">contract_no_trump1</property>
 		      <signal name="activate" handler="on_contract_diamonds1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
@@ -339,7 +339,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_1</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <signal name="activate" handler="on_level1_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
 			  </child>
@@ -349,7 +349,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_2</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level2_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -360,7 +360,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_3</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level3_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -371,7 +371,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_4</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level4_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -382,7 +382,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_5</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level5_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -393,7 +393,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_6</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level6_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -421,7 +421,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_No double</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <signal name="activate" handler="on_level_doubled0_activate" last_modification_time="Wed, 13 Jun 2007 21:46:31 GMT"/>
 			    </widget>
 			  </child>
@@ -431,7 +431,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">X _Doubled</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">level_doubled0</property>
 			      <signal name="activate" handler="on_level_doubled1_activate" last_modification_time="Sat, 03 Feb 2007 20:56:20 GMT"/>
 			    </widget>
@@ -466,7 +466,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">N_one</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <signal name="activate" handler="on_vuln_none_activate" last_modification_time="Sat, 17 Feb 2007 00:50:04 GMT"/>
 			    </widget>
 			  </child>
@@ -476,7 +476,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">vuln_none</property>
 			      <signal name="activate" handler="on_vuln_ns_activate" last_modification_time="Sat, 17 Feb 2007 00:50:04 GMT"/>
 			    </widget>
@@ -487,7 +487,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_East-West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">vuln_none</property>
 			      <signal name="activate" handler="on_vuln_ew_activate" last_modification_time="Sat, 17 Feb 2007 00:50:04 GMT"/>
 			    </widget>
@@ -565,7 +565,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <signal name="activate" handler="on_pos_north_south_activate" last_modification_time="Sun, 18 Feb 2007 18:04:00 GMT"/>
 			    </widget>
 			  </child>
@@ -575,7 +575,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">Declarer</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">pos_north_south</property>
 			      <signal name="activate" handler="on_pos_declarer_activate" last_modification_time="Sun, 18 Feb 2007 18:04:00 GMT"/>
 			    </widget>
@@ -746,7 +746,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">Cards</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">style_text</property>
 			      <signal name="activate" handler="on_style_cards_activate" last_modification_time="Mon, 09 Jul 2007 20:12:39 GMT"/>
 			    </widget>
