--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -124,15 +124,6 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="deal_line">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Line</property>
-		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_deal_line_activate" last_modification_time="Mon, 19 Feb 2007 01:09:50 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
 		    <widget class="GtkMenuItem" id="dealer1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Dealer</property>
@@ -669,7 +660,7 @@
 		  <child>
 		    <widget class="GtkCheckMenuItem" id="cards1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Cards</property>
+		      <property name="label" translatable="yes">_Cards</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">False</property>
 		      <signal name="activate" handler="on_cards1_activate" last_modification_time="Fri, 15 Jun 2007 22:12:11 GMT"/>
@@ -677,9 +668,19 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkCheckMenuItem" id="deal_line">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">_Line entry</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">False</property>
+		      <signal name="activate" handler="on_deal_line_activate" last_modification_time="Mon, 19 Feb 2007 01:09:50 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkCheckMenuItem" id="bidding1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Bidding</property>
+		      <property name="label" translatable="yes">_Bidding</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">False</property>
 		      <signal name="activate" handler="on_bidding1_activate" last_modification_time="Fri, 15 Jun 2007 22:12:11 GMT"/>
@@ -689,7 +690,7 @@
 		  <child>
 		    <widget class="GtkCheckMenuItem" id="bids1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Bids</property>
+		      <property name="label" translatable="yes">Bi_ds</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">False</property>
 		      <signal name="activate" handler="on_bids1_activate" last_modification_time="Fri, 15 Jun 2007 22:57:27 GMT"/>
@@ -699,7 +700,7 @@
 		  <child>
 		    <widget class="GtkCheckMenuItem" id="play1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Play</property>
+		      <property name="label" translatable="yes">Pla_y</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">False</property>
 		      <signal name="activate" handler="on_play1_activate" last_modification_time="Fri, 15 Jun 2007 22:12:11 GMT"/>
@@ -715,7 +716,7 @@
 		  <child>
 		    <widget class="GtkCheckMenuItem" id="played_cards1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Played cards</property>
+		      <property name="label" translatable="yes">_Played cards</property>
 		      <property name="use_underline">True</property>
 		      <property name="active">False</property>
 		      <signal name="activate" handler="on_played_cards1_activate" last_modification_time="Sat, 16 Jun 2007 22:53:34 GMT"/>
@@ -725,7 +726,7 @@
 		  <child>
 		    <widget class="GtkMenuItem" id="display_style1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Display style</property>
+		      <property name="label" translatable="yes">Display _style</property>
 		      <property name="use_underline">True</property>
 
 		      <child>
@@ -734,7 +735,7 @@
 			  <child>
 			    <widget class="GtkRadioMenuItem" id="style_text">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Text</property>
+			      <property name="label" translatable="yes">_Text</property>
 			      <property name="use_underline">True</property>
 			      <property name="active">True</property>
 			      <signal name="activate" handler="on_style_text_activate" last_modification_time="Mon, 09 Jul 2007 20:12:39 GMT"/>
@@ -744,7 +745,7 @@
 			  <child>
 			    <widget class="GtkRadioMenuItem" id="style_cards">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Cards</property>
+			      <property name="label" translatable="yes">_Cards</property>
 			      <property name="use_underline">True</property>
 			      <property name="active">False</property>
 			      <property name="group">style_text</property>
